# VoteKit-dev

./: .gitignore  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/user/: ballot_graph.rst  bg_from_params.rst  bg_models_1.rst  bg_models_2.rst  getting_started.rst  some_plotting_options.rst
