[project]
name = "votekit"
version = "3.1.0"
description = "A Swiss army knife for computational social choice research."
authors = [{name = "MGGG", email =  "code@mggg.org"}]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "scipy (>=1.11.1, <2.0)",
    "mypy (==1.15)",
    "pydantic (>=2.8.2, <3.0)",
    "pandas-stubs (>=2.0.2.230605, <2.1)",
    "pot (==0.9.4)",
    "networkx (>=3.1, <4.0)",
    "jinja2 (>=3.1.2, <4.0)",
    "matplotlib (>=3.7.2, <4.0)",
    "pandas (>2.2)",
    "apportionment (>=1.0, <2.0)",
    "scikit-learn (>=1.3.2, <2.0)",
    "numpy (>=1.26.0, <2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "types-seaborn (>=0.13.2.20250111,<0.14.0.0)",
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^24.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
ipython = "^8.17.2"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-click = "^0.8.1"
mkdocs-material = "^9.4.10"
mkdocs-material-extensions = "^1.3"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[project.urls]
repository = "https://github.com/mggg/VoteKit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"